--- a/app/src/main/res/layout-v21/activity_detail_bengkel.xml
+++ b/app/src/main/res/layout-v21/activity_detail_bengkel.xml
@@ -15,7 +15,8 @@
         android:layout_margin="16dp"
         android:clickable="true"
         app:layout_anchor="@+id/header"
-        app:layout_anchorGravity="bottom|right|end"/>
+        app:layout_anchorGravity="bottom|right|end"
+        android:focusable="true" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -62,7 +63,7 @@
                         android:layout_gravity="bottom"
                         android:layout_margin="8dp"
                         android:textSize="18sp"
-                        android:text="Nama Bengkel" />
+                        android:text="@string/nama_bengkel" />
 
                 </FrameLayout>
 
@@ -71,21 +72,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="Alamat" />
+                    android:text="@string/alamat" />
 
                 <TextView
                     android:id="@+id/txtDJamBuka"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="Jam Buka" />
+                    android:text="@string/jam_buka" />
 
                 <TextView
                     android:id="@+id/txtDTelepon"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="Telepon" />
+                    android:text="@string/telepon" />
 
             </LinearLayout>
 
@@ -111,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="?android:attr/actionOverflowButtonStyle"
-                    android:layout_gravity="right"
+                    android:layout_gravity="end"
                     android:visibility="gone"
                     android:onClick="showPopup"/>
 
