--- a/app/src/main/res/layout/bengkel_list.xml
+++ b/app/src/main/res/layout/bengkel_list.xml
@@ -18,9 +18,9 @@
             android:id="@+id/txtNama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/imgList"
+            android:layout_toEndOf="@+id/imgList"
             android:text="Nama Bengkel"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtAlamat"
@@ -29,7 +29,7 @@
             android:layout_below="@+id/txtNama"
             android:layout_toEndOf="@+id/imgList"
             android:text="Alamat"
-            android:textSize="14dp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/txtRating"
@@ -38,21 +38,21 @@
             android:layout_toEndOf="@+id/imgList"
             android:layout_alignBottom="@+id/imgList"
             android:text="4.3"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_star_black_24dp"
-            android:layout_toRightOf="@+id/txtRating"
+            android:layout_toEndOf="@+id/txtRating"
             android:layout_alignBottom="@+id/imgList"/>
         <TextView
             android:id="@+id/txtJarak"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignBottom="@+id/imgList"
             android:text="Jarak"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
