--- a/app/src/main/res/layout/fragment_bengkel.xml
+++ b/app/src/main/res/layout/fragment_bengkel.xml
@@ -15,7 +15,7 @@
         android:id="@+id/fab_bengkel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:src="@drawable/gb2"/>
 
