--- a/app/src/main/res/layout/activity_add_bengkel.xml
+++ b/app/src/main/res/layout/activity_add_bengkel.xml
@@ -467,7 +467,6 @@
 
             </LinearLayout>
 
-
         <Button
             android:id="@+id/btnSetLokasi"
             android:layout_width="wrap_content"
@@ -482,6 +481,40 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             />
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+
+            <ImageView
+                android:id="@+id/imgFoto1"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="8dp"
+                android:padding="8dp"
+                android:src="@drawable/ic_add_a_photo_black_50dp"
+                android:onClick="addPhoto"/>
+            <ImageView
+                android:id="@+id/imgFoto2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="8dp"
+                android:padding="8dp"
+                android:src="@drawable/ic_add_a_photo_black_50dp"
+                android:onClick="addPhoto"/>
+            <ImageView
+                android:id="@+id/imgFoto3"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="8dp"
+                android:padding="8dp"
+                android:src="@drawable/ic_add_a_photo_black_50dp"
+                android:onClick="addPhoto"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
